# gem

./: .celsius_env  .clean_all  .common_eccc_setup  .common_setup  .eccc_initial_setup  .eccc_load_rpn  .eccc_setup_gnu  .eccc_setup_gnu_5  .eccc_setup_gnu_7  .eccc_setup_intel  .eccc_setup_intel_16  .eccc_setup_intel_19  .eccc_setup_intel_2021.4.0  .eccc_setup_intel_2023.2.0  .git-subtree  .gitignore  .gitlab-ci.yml  .gitmodules  .initial_eccc_setup  .initial_setup  .ssmuse_gem_intel_16  .ssmuse_gfortran_5.1.0  .ssmuse_gfortran_7.4.0  .ssmuse_intel_16  .ssmuse_intel_19  CMakeLists.txt  COMPILATIONS  Config.cmake.in  Doxyfile  EC-README.md  EC-extended.README  EC.README  GEM-version  MANIFEST  Makefile  README  README-EC  README-ITQ.md  README-gem.md  README-install.md  (+16 more)
project/: CMakeLists.txt  Linux-aarch64-gnu.cmake  Linux-x86_64-flang.cmake  Linux-x86_64-gfortran.cmake  Linux-x86_64-gfortran.cmake.debug  Linux-x86_64-gfortran.cmake.orig  Linux-x86_64-gnu.cmake  Linux-x86_64-intel.cmake  Linux-x86_64-intel.cmake.16  Linux-x86_64-intel.cmake.16_brooks_dynamic  Linux-x86_64-intel.cmake.16_brooks_static  Linux-x86_64-intel.cmake.19  Linux-x86_64-intel.cmake.19_daley_static  Linux-x86_64-intel.cmake.19_swan_dynamic  Linux-x86_64-intel.cmake.19_swan_static  Linux-x86_64-intel.cmake.debug  Linux-x86_64-pgi.cmake  Linux-x86_64-pgi.cmake_17.10  Linux-x86_64-pgi.cmake_18.4_g  compiler.sh  distclean.cmake  intel_find_best_arch.sh  os.sh  sles-15-skylake-64-xc50-intel.cmake  ubuntu-18.04-amd64-64-gnu.cmake  ubuntu-18.04-amd64-64-intel.cmake  ubuntu-18.04-skylake-64-gnu.cmake  ubuntu-18.04-skylake-64-intel.cmake
project/orig-scripts/: runmod
sources/: CMakeLists.txt  Linux-ppc64le-xlf.cmake  Linux-x86_64-cray.cmake  Linux-x86_64-gfortran.cmake  Linux-x86_64-gfortran.cmake.debug  Linux-x86_64-gfortran.cmake.orig  Linux-x86_64-ifort.cmake  Linux-x86_64-ifort.cmake.16  Linux-x86_64-ifort.cmake.19  Linux-x86_64-intel.cmake.16  Linux-x86_64-intel.cmake.19  Linux-x86_64-pgfortran.cmake  Linux-x86_64-pgi.cmake  Linux-x86_64-pgi.cmake_17.10  Linux-x86_64-pgi.cmake_18.4  README.build  README.run  compiler.sh  distclean.cmake  lncfg.sh  os.sh
sources/orig-scripts/: mybatchjob.pbs  runmod  runprep
sources/src/: CMakeLists.txt
src/: CMakeLists-rmn-19.txt  CMakeLists-rmn-20.txt  CMakeLists.txt  flags-GEM.cmake
src/api/: phy_get.F90  phy_getmeta.F90  phy_init.F90  phy_input.F90  phy_itf.F90  phy_nml.F90  phy_output.F90  phy_output_mod.F90  phy_put.F90  phy_restart.F90  phy_snapshot.F90  phy_step.F90  phy_terminate.F90
src/base/: Bermejo_Conde.F90  HOR_bndry.F90  HORgrid_options.F90  VERgrid_options.F90  adz_BC_LAM_Aranami_hlt.F90  adz_BC_LAM_zlf_0_hlt.F90  adz_BC_LAM_zlf_hlt.F90  adz_cfl.F90  adz_interp_hlt.F90  adz_main.F90  adz_mem.F90  adz_options.F90  adz_post_tr.F90  adz_post_tr_bc_hlt.F90  adz_set.F90  adz_tracers.F90  adz_tracers_massfixing.F90  almost_zero.F90  apply_rad_tendencies.F90  atmflux.F90  boundary_layer.F90  bourge1_3d.F90  bourge2.F90  bubble_fislH_data.F90  bubble_options.F90  calcdiag.F90  calcdiag_ptr.hf  calcz0.F90  ccc1_attenue.F90  ccc1_bandsh.cdk  ccc1_cccmarad.F90  ccc1_ckdlw.F90  ccc1_ckdsw.F90  ccc1_gasoptl.F90  ccc1_lattenu.F90  ccc1_lwtragh.F90  ccc1_preintp.F90  ccc1_raddriv.F90  ccc1_sattenu.F90  ccc1_tcontl.F90  (+305 more)
src/canonical/: canonical_Terminator_module.F90  canonical_cases.F90  canonical_coriolis.F90  dcmip_diagnostics.F90  dcmip_mult_X.F90  dcmip_tracers12_transport.F90  dcmip_tracers13_transport.F90  dcmip_tropical_cyclone.F90  wil_Terminator_0.F90  wil_case5.F90  wil_case6.F90  wil_eval_mer_vel.F90  wil_galewski_geo_8.F90  wil_gauleg.F90  wil_uvcase1.F90  wil_uvcase9.F90
src/cclargs/: CMakeLists.txt  cclargs_lite.c
src/chm_stubs/: chm_init.F90  chm_nml.F90
src/driver/: drv_grid_mod.F90  drv_path.F90  drv_print_banner.F90
src/editfst/: CMakeLists.txt  fstnol.f90  sauvdez.f90  select.f90  setper.f90
src/fstcomp/: CMakeLists.txt  fstcomp.f  statfldx.F90  statfldx.f90  version.inc
src/fststat/: CMakeLists.txt  statfld4.f
src/gem/: CMakeLists.txt  maingemdm.F90  maingemdm.in
src/gemdyn/: .gitignore  CMakeLists.txt  CMakeLists.txt.F08  LICENSE.txt  MANIFEST  README.md  config.in
src/main/: CMakeLists.txt  checkdmpart.F90  feseri.F90  flipit.F90  gemgrid.F90  maincheckdmpart.in  maingemgrid.in  mainprphynml.F90  maintest_integrals.F90  mainyy2global.F90  mainyyencode.F90  test_inputio8.F90  test_integrals.F90  time2sec_main.F90  yy2global.F90  yydecode.F90
src/maingem/: CMakeLists.txt  maincheckdmpart.F90  mainfeseri.F90  maingemdm.F90  maingemgrid.F90  mainprgemnml.F90
src/maingemnompi/: CMakeLists.txt
src/massv/: CMakeLists.txt  vatan2.f  vdiv.f  vexp.f  vpown1.f  vsatan2.f  vsin.f  vsincos.f  vspow1n.f  vsqrt.f
src/modelutils/: CMakeLists.txt  MANIFEST  README.md  README_librarian.md  config.in
src/mpi-extras/: CMakeLists.txt  README.md  RPN_MPI_get_mpi_definitions.F90  RPN_MPI_mpi_layout.hf  RPN_MPI_mpi_symbols.hf  RPN_MPI_mpif.F90  RPN_MPI_nulls.hf  c_binding_extras.hf  iso_c_binding_extras.hf
src/no_mpi/: CMakeLists.txt  gem_monitor_output.c
src/ov_ifort/: ifort_fpe_handler.F90
src/pgsm/: CMakeLists.txt  c_pgsm.c  f_pgsm.f90  version.inc
src/rmn/: Makefile  goas_rmnlib_version.inc  rmnlib_version.inc
src/rpn-si/: rmn
src/rpncomm/: CMakeLists.txt  Makefile.ECsetup  Makefile.common  REFERENCE.lst  RPN_COMM_TEST_CFG.txt  RPN_COMM_WTIME.F90  RPN_COMM_Xpose1.F90  RPN_COMM_Xpose148.F90  RPN_COMM_Xpose2.F90  RPN_COMM_adj_halo.F90  RPN_COMM_barrier.F90  RPN_COMM_bcast.F90  RPN_COMM_coll.F90  RPN_COMM_comm.F90  RPN_COMM_constants.inc  RPN_COMM_cpu_configuration.F90  RPN_COMM_ezwin.F90  RPN_COMM_ftoc.inc  RPN_COMM_gather_e1y3.F90  RPN_COMM_gatherv.F90  RPN_COMM_getenv.c  RPN_COMM_init.F90  RPN_COMM_interfaces.inc  RPN_COMM_interfaces_int.inc  RPN_COMM_io_pes.F90  RPN_COMM_irecv.F90  RPN_COMM_legacy.inc  RPN_COMM_manage_halo.c  RPN_COMM_optn.F90  RPN_COMM_progatate_boundary.F90  RPN_COMM_recv.F90  RPN_COMM_sendrecv.F90  RPN_COMM_shmget.c  RPN_COMM_sock.c  RPN_COMM_split_by_node.F90  RPN_COMM_spread.inc  RPN_COMM_transpose.F90  (+15 more)
(+4506 files in other folders)
